build(Pom-ArgLine): Added 3 arglines to remove warnings and future proof inline mockito (#13)